--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <script src="scripts/app.js" type="text/javascript"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Oswald" rel="stylesheet">
+    <script src="scripts/sweetalert.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles/sweetalert.css">
 
 
 
@@ -26,7 +27,7 @@
 
      <div class="row">
        <div class=".col-md-12 text-center">
-
+         <h1>Airplane Crash!</h1>
        </div>
 
      </div>
@@ -391,11 +392,9 @@
      </div>
      <div class="row">
        <div class=".col-md-12 text-center">
-         <div class="col-md-1 text-center">
-         </div>
-         <div class="col-md-1 text-center">
-           <button type="button" class="btn btn-default start">Start</button>
-         </div>
+         <button type="button" class="btn btn-default start">Start</button>
+
+
        </div>
 
      </div>
